tdf#94031 - slideshow: bind correct GL context for prepareEnvironment

Change-Id: Ib139e81f770531f7d808764dd3a77c7ac8d6fa3c